# strausforge

./: .gitignore  AGENTS.md  CITATION.cff  README.md  expanded_off_2_500k.jsonl  expanded_off_2_50k.jsonl  pyproject.toml
.github/workflows/: ci.yml
data/: identities.jsonl
experiments/: hardness_20M_off.csv  hardness_20M_posw.csv
src/strausforge/: __init__.py  __main__.py  cert.py  cli.py  coverage.py  erdos_straus.py  factor_meta.py  fit.py  gui_app.py  hardness_core.py  identities.py  loop.py  mine.py
tests/: test_cert.py  test_cli.py  test_coverage.py  test_factor_meta.py  test_fit.py  test_gui.py  test_hardness_core.py  test_identities_verify.py  test_identity.py  test_loop_small.py  test_mine_small.py  test_mod8_r1_family.py  test_module_entrypoint.py  test_odd_residue_loop.py  test_sample_semiprime_rate.py  test_search_small.py
tests/fixtures/: expanded_small.jsonl  hard_48_r1_r25_small.jsonl
tools/: analyze_witnesses.py  sample_semiprime_rate.py  window_report.ps1  window_report_meta.ps1
